force-app/main/default/objects/Contenido_Envio__c/fields/Codigo_Arancelario__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Arancelario__c</fullName>
    <label>Código Arancelario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>