force-app/main/default/objects/Contenido_Envio__c/fields/Pais_fab__c.field-meta.xml
<CustomField>
    <fullName>Pais_fab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Fabricación</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Contenidos Envios</relationshipLabel>
    <relationshipName>Contenidos_Envios</relationshipName>
    <type>Lookup</type>
</CustomField>