force-app/main/default/objects/Contenido_Envio__c/fields/Pickup__c.field-meta.xml
<CustomField>
    <fullName>Pickup__c</fullName>
    <label>Pickup</label>
    <referenceTo>Guias_de_Exportacion__c</referenceTo>
    <relationshipLabel>Contenidos Envios</relationshipLabel>
    <relationshipName>Contenidos_Envios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>